bump gatling version